--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -204,7 +204,17 @@
                         <td>
                             <div class="vehicle-info">
                                 <strong>{{ order.vehicle.registration_number }}</strong><br>
-                                <small class="text-muted">{{ order.vehicle.make }} {{ order.vehicle.model }}</small>
+                                <small class="text-muted">
+                                    {% if order.vehicle %}
+                                        {% if order.vehicle.make or order.vehicle.model %}
+                                            {{ order.vehicle.make|default:"Unknown" }} {{ order.vehicle.model|default:"Vehicle" }}
+                                        {% else %}
+                                            {{ order.vehicle.license_plate|default:"Unknown Vehicle" }}
+                                        {% endif %}
+                                    {% else %}
+                                        No vehicle
+                                    {% endif %}
+                                </small>
                             </div>
                         </td>
                         
