--- a/templates/services/order_receipt.html
+++ b/templates/services/order_receipt.html
@@ -408,17 +408,21 @@
                         <span class="info-label">Vehicle:</span>
                         <span class="info-value">{{ service_order.vehicle.license_plate|default:"N/A" }}</span>
                     </div>
+                    {% if service_order.vehicle.make or service_order.vehicle.model %}
                     <div class="info-row">
                         <span class="info-label">Make/Model:</span>
-                        <span class="info-value">{{ service_order.vehicle.make|default:"" }} {{ service_order.vehicle.model|default:"" }}</span>
+                        <span class="info-value">
+                            {{ service_order.vehicle.make|default:"Unknown" }} {{ service_order.vehicle.model|default:"Vehicle" }}
+                        </span>
                     </div>
+                    {% endif %}
                     {% if service_order.vehicle.year %}
                     <div class="info-row">
                         <span class="info-label">Year:</span>
                         <span class="info-value">{{ service_order.vehicle.year }}</span>
                     </div>
                     {% endif %}
-                    {% if service_order.vehicle.color %}
+                    {% if service_order.vehicle.color and service_order.vehicle.color != 'Unknown' %}
                     <div class="info-row">
                         <span class="info-label">Color:</span>
                         <span class="info-value">{{ service_order.vehicle.color }}</span>
@@ -624,17 +628,21 @@
                         <span>Vehicle:</span>
                         <strong>{{ service_order.vehicle.license_plate|default:"N/A" }}</strong>
                     </div>
+                    {% if service_order.vehicle.make or service_order.vehicle.model %}
                     <div class="preview-row">
                         <span>Make/Model:</span>
-                        <strong>{{ service_order.vehicle.make|default:"" }} {{ service_order.vehicle.model|default:"" }}</strong>
+                        <strong>
+                            {{ service_order.vehicle.make|default:"Unknown" }} {{ service_order.vehicle.model|default:"Vehicle" }}
+                        </strong>
                     </div>
+                    {% endif %}
                     {% if service_order.vehicle.year %}
                     <div class="preview-row">
                         <span>Year:</span>
                         <strong>{{ service_order.vehicle.year }}</strong>
                     </div>
                     {% endif %}
-                    {% if service_order.vehicle.color %}
+                    {% if service_order.vehicle.color and service_order.vehicle.color != 'Unknown' %}
                     <div class="preview-row">
                         <span>Color:</span>
                         <strong>{{ service_order.vehicle.color }}</strong>
