--- a/templates/services/order_detail.html
+++ b/templates/services/order_detail.html
@@ -696,7 +696,17 @@
                     </div>
                     <div class="info-item">
                         <span class="info-label">Make & Model</span>
-                        <span class="info-value">{{ order.vehicle.make }} {{ order.vehicle.model }}</span>
+                        <span class="info-value">
+                            {% if order.vehicle %}
+                                {% if order.vehicle.make or order.vehicle.model %}
+                                    {{ order.vehicle.make|default:"Unknown" }} {{ order.vehicle.model|default:"Vehicle" }}
+                                {% else %}
+                                    {{ order.vehicle.license_plate|default:"Unknown Vehicle" }}
+                                {% endif %}
+                            {% else %}
+                                No vehicle assigned
+                            {% endif %}
+                        </span>
                     </div>
                     <div class="info-item">
                         <span class="info-label">Color</span>
