Improve sidebar navigation order and naming
- Reordered Orders & Queue section: Quick Order, Current Queue, All Service Orders
- Renamed 'Service Queue' to 'Current Queue' for better clarity
- Renamed 'Service Orders' to 'All Service Orders' to be more descriptive
- Applied changes to both regular user and attendant navigation sections
- Improved user experience by prioritizing most-used actions first

--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -42,17 +42,6 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'order_list' %}active{% endif %}" 
-                       href="/business/{{ request.tenant.slug }}/services/orders/">
-                        <i class="nav-icon fas fa-clipboard-list"></i>
-                        <span class="nav-text">Service Orders</span>
-                        {% if pending_orders_count > 0 %}
-                        <span class="nav-badge nav-badge-warning">{{ pending_orders_count }}</span>
-                        {% endif %}
-                    </a>
-                </li>
-                
-                <li class="nav-item">
                     <a class="nav-link nav-link-featured {% if request.resolver_match.url_name == 'quick_order' %}active{% endif %}" 
                        href="/business/{{ request.tenant.slug }}/services/orders/quick/">
                         <i class="nav-icon fas fa-bolt"></i>
@@ -65,9 +54,20 @@
                     <a class="nav-link {% if request.resolver_match.url_name == 'queue' %}active{% endif %}" 
                        href="/business/{{ request.tenant.slug }}/services/queue/">
                         <i class="nav-icon fas fa-tasks"></i>
-                        <span class="nav-text">Service Queue</span>
+                        <span class="nav-text">Current Queue</span>
                         {% if active_queue_count > 0 %}
                         <span class="nav-badge nav-badge-warning">{{ active_queue_count }}</span>
+                        {% endif %}
+                    </a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'order_list' %}active{% endif %}" 
+                       href="/business/{{ request.tenant.slug }}/services/orders/">
+                        <i class="nav-icon fas fa-clipboard-list"></i>
+                        <span class="nav-text">All Service Orders</span>
+                        {% if pending_orders_count > 0 %}
+                        <span class="nav-badge nav-badge-warning">{{ pending_orders_count }}</span>
                         {% endif %}
                     </a>
                 </li>
@@ -94,13 +94,11 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'order_list' %}active{% endif %}" 
-                       href="/business/{{ request.tenant.slug }}/services/orders/">
-                        <i class="nav-icon fas fa-clipboard-list"></i>
-                        <span class="nav-text">Service Orders</span>
-                        {% if pending_orders_count > 0 %}
-                        <span class="nav-badge nav-badge-warning">{{ pending_orders_count }}</span>
-                        {% endif %}
+                    <a class="nav-link nav-link-featured {% if request.resolver_match.url_name == 'quick_order' %}active{% endif %}" 
+                       href="/business/{{ request.tenant.slug }}/services/orders/quick/">
+                        <i class="nav-icon fas fa-bolt"></i>
+                        <span class="nav-text">Quick Order</span>
+                        <span class="nav-badge nav-badge-primary">FAST</span>
                     </a>
                 </li>
                 
@@ -108,9 +106,20 @@
                     <a class="nav-link {% if request.resolver_match.url_name == 'queue' %}active{% endif %}" 
                        href="/business/{{ request.tenant.slug }}/services/queue/">
                         <i class="nav-icon fas fa-tasks"></i>
-                        <span class="nav-text">Service Queue</span>
+                        <span class="nav-text">Current Queue</span>
                         {% if active_queue_count > 0 %}
                         <span class="nav-badge nav-badge-warning">{{ active_queue_count }}</span>
+                        {% endif %}
+                    </a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'order_list' %}active{% endif %}" 
+                       href="/business/{{ request.tenant.slug }}/services/orders/">
+                        <i class="nav-icon fas fa-clipboard-list"></i>
+                        <span class="nav-text">All Service Orders</span>
+                        {% if pending_orders_count > 0 %}
+                        <span class="nav-badge nav-badge-warning">{{ pending_orders_count }}</span>
                         {% endif %}
                     </a>
                 </li>
